--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+/server/target/
+/web/target/
+/web/src/main/web/node
 
 ### STS ###
 .apt_generated
@@ -23,3 +24,45 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# dependencies
+/node_modules
+
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
