--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /server/target/
 /web/target/
-/web/src/main/web/node
+
 
 ### STS ###
 .apt_generated
@@ -26,12 +26,13 @@
 /.nb-gradle/
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+/web/src/main/web/dist
+/web/src/main/web/tmp
+/web/src/main/web/out-tsc
 
 # dependencies
-/node_modules
+/web/src/main/web/node
+/web/src/main/web/node_modules
 
 # profiling files
 chrome-profiler-events.json
