--- a/client/pom.xml
+++ b/client/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web</artifactId>
-    <name>web</name>
+    <artifactId>client</artifactId>
+    <name>client</name>
 
     <build>
         <plugins>
